Añadido conversion del ipynb a pdf

--- a/practica3/Practica 3.ipynb
+++ b/practica3/Practica 3.ipynb
@@ -1670,11 +1670,18 @@
     "### Conclusiones\n",
     "* La ecualización local de histogramas puede ser muy tardada, pero permite revelar aspectos de la imagen que no se pueden ver a simple vista.\n",
     "* Hacer una segmentacíón por distancia de histogramas da muy buenos resultados. Sin embargo, el proceso es muy tardado y la imagen resultante puede no ser muy clara, por lo que es recomendable filtrar adicionalmente el resultado.\n",
-    "* Al utilizar un vector \n",
+    "* Al utilizar un vector de características calculado sobre el histograma local para clasificar cada pixel, resulta mejor utilizar la distancia euclidiana entre dicho vector y un vector promedio de la clase que nos interesa. Utilizar un clasificador como el bayesiano, o el SVM, no nos dió tan buenos resultados\n",
     " \n",
     "### Fuentes\n",
     "* Gozález R., Woods R. Digital Image Processing, 3a edición "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
